--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,13 @@
+manifest.json:
 {
   "manifest_version": 2,
   "name": "Time Tracker",
-  "description": "A Chrome extension to track time using a toggle button.",
   "version": "1.0",
-  "permissions": ["activeTab", "https://www.googleapis.com/auth/spreadsheets"],
-  "background": {
-    "scripts": ["background.js"]
-  },
+  "permissions": [
+    "https://www.googleapis.com/*",
+    "https://sheets.googleapis.com/*"
+  ],
   "browser_action": {
-    "default_title": "Time Tracker",
     "default_popup": "popup.html"
   }
 }
